comment some videos

--- a/index.html
+++ b/index.html
@@ -352,10 +352,10 @@ Clases de guitarra para todas las edades.
 
       <iframe style="height:360px" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/ibMSEH4L33Q"></iframe>      
 
-      <video style="max-height:360px;max-width: 100%;" controls><source src="videos/Jose - All of me muestra 2019.mp4" type="video/mp4" title="All of me">...</video>
+    <!--  <video style="max-height:360px;max-width: 100%;" controls><source src="videos/Jose - All of me muestra 2019.mp4" type="video/mp4" title="All of me">...</video>
 
       <video style="max-height:360px;max-width: 100%;" controls><source src="videos/la alucinada.mp4" type="video/mp4" title="la alucinada">...</video>
-
+-->
   </div>
 
   <h3 class="w3-center">Resumen de la Muestra anual de 2019</h3>
