change order of ask question

--- a/index.html
+++ b/index.html
@@ -216,12 +216,14 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     <a href="#videos" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> Videos</a>
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> Profesor</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> Contacto</a>
-   <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-right">
+   
+    <!--  <a href="#contact" class="w3-bar-item w3-button w3-hide-small w3-right">
       Solicitá Presupuesto
       <i class="fa fa-phone fa-fw w3-hover-text-black"  style="font-size:20px" ></i>
       <strong>
         15 5114-4197
-      </strong></a>
+      </strong></a> -->
+
   </div>
 
   <!-- Navbar on small screens -->
@@ -451,10 +453,76 @@ Participe de grupos de rock, jazz, funk, blues y como solista de guitarra en dif
     <!-- About Section -->
     <div class="w3-container" id="aboutInformation">
 
-<div style=" display: flex; justify-content: center;">
+      <div style=" display: flex; justify-content: center;">
         <iframe  class="w3-center" style="width:60%;height:345px" src="https://www.youtube.com/embed/eFTkzCQol0M">
         </iframe>
+      </div>
+
+      <!-- Redes sociales -->
+      <div class="w3-padding-64 w3-section">
+        Seguime en mis redes sociales
+        <ul>
+          <li><a target="_blank" rel="noreferrer" title="Facebook NachoFlamenco"
+             href="https://www.facebook.com/guitarraeneltalar/"><i
+                  class="fab fa-facebook-square w3-hover-opacity  w3-xlarge"></i> Facebook</a>
+          </li>   
+        <li><a target="_blank" rel="noreferrer" title="instagram libre NachoFlamenco" href="https://www.instagram.com/guitarra_en_talar/?hl=es-la"><i class="fab fa-instagram w3-hover-opacity  w3-xlarge"></i> Instagram</a>
+        </li>
+
+          <li><a target="_blank" rel="noreferrer" href="https://www.youtube.com/channel/UC14vb-V57tf-j_kZpGDIFvA" title="Youtube NachoFlamenco"> <i class="fab fa-youtube w3-hover-opacity  w3-xlarge"></i> Youtube</a>
+          </li>
+
+          </ul>
+      </div>
+
+
+    </div>
 </div>
+
+<!-- Third Parallax Image with Portfolio Text -->
+<a  class="false-href" href="#contact" >
+  <div class="bgimg-3 w3-display-container w3-opacity-min">
+    <div class="w3-display-middle">
+       <span class="w3-xxlarge w3-text-white w3-wide">CONTACTO</span>
+    </div>
+  </div>
+</a>
+
+<!-- Container (Contact Section) -->
+<div class="w3-content w3-container w3-padding-64" id="contact">
+  <h3 class="w3-center">¿Alguna consulta?</h3>
+  <p class="w3-center">
+	  Solicita presupuesto <strong>sin cargo</strong> </p>
+
+  <div class="w3-row w3-padding-32 w3-section">
+
+    <div class="w3-col m8 w3-panel">
+      <div class="w3-large w3-margin-bottom">
+        <i id="Telefono" class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>
+        <strong>
+        Teléfono: 
+        <a class="w3-hide-small" >
+          15 5114-4197
+        </a> 
+        <a class="w3-hide-medium w3-hide-large" href="tel:1551144197">15 5114-4197</a>
+        
+        </strong>
+        <br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Cuba 858 - El Talar<br>
+        <div class="w3-hide-small">
+          <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right "></i>
+           nachoflamenco@gmail.com<br>
+        </div>
+        <div class="w3-hide-medium w3-hide-large">
+          <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right "></i>
+          <a id="contactMailto" class="false-href" href="mailto:nachoflamenco@gmail.com?subject=Nacho Rocca%20-%20Me%20interesan%20las%20clases">
+           nachoflamenco@gmail.com
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
       <!-- Preguntar -->
@@ -520,56 +588,7 @@ Participe de grupos de rock, jazz, funk, blues y como solista de guitarra en dif
             </div>
 
         </div>
-
-    </div>
-</div>
-
-<!-- Third Parallax Image with Portfolio Text -->
-<a  class="false-href" href="#contact" >
-  <div class="bgimg-3 w3-display-container w3-opacity-min">
-    <div class="w3-display-middle">
-       <span class="w3-xxlarge w3-text-white w3-wide">CONTACTO</span>
-    </div>
-  </div>
-</a>
-
-<!-- Container (Contact Section) -->
-<div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">¿Alguna consulta?</h3>
-  <p class="w3-center">
-	  Solicita presupuesto <strong>sin cargo</strong> </p>
-
-  <div class="w3-row w3-padding-32 w3-section">
-
-    <div class="w3-col m8 w3-panel">
-      <div class="w3-large w3-margin-bottom">
-        <i id="Telefono" class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>
-        <strong>
-        Teléfono: 
-        <a class="w3-hide-small" >
-          15 5114-4197
-        </a> 
-        <a class="w3-hide-medium w3-hide-large" href="tel:1551144197">15 5114-4197</a>
         
-        </strong>
-        <br>
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Cuba 858 - El Talar<br>
-        <div class="w3-hide-small">
-          <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right "></i>
-           nachoflamenco@gmail.com<br>
-        </div>
-        <div class="w3-hide-medium w3-hide-large">
-          <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right "></i>
-          <a id="contactMailto" class="false-href" href="mailto:nachoflamenco@gmail.com?subject=Nacho Rocca%20-%20Me%20interesan%20las%20clases">
-           nachoflamenco@gmail.com
-          </a>
-        </div>
-      </div>
-
-
-    </div>
-
-  </div>
 </div>
 
   <div class="snackbar" id="mail-snackbar">Mail Enviado</div>
