--- a/index.html
+++ b/index.html
@@ -253,42 +253,51 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h1 class="w3-center">Clases de guitarra</h1>
-  <h2 class="w3-center w3-med">
-     Aprender a tocar Guitarra
-  </h2>
+  <h1 class="w3-center">CLASES DE GUITARRA</h1>
+
+
+
+      <br/> 
+      <h2 class="w3-center ">¿Querés aprender a tocar pero no te animas?</h2>
+      <h2 class="w3-center ">¿Querés mejorar tu técnica?</h2>
+
+  <h3 class="w3-center w3-med">
+     Aprende a tocar la Guitarra <!--🎸🎶-->
+  </h3>
+    <br/>
+   <p class="w3-center w3-container " ><em>
+  Clases presenciales, por 
+    <a target="_blank" href="https://zoom.us/" rel="noreferrer" >
+          <img style="width: 50px;" src="css/zoom.svg" alt="zoom" title="zoom"/></a>, 
+          videollamada de 
+    <a target="_blank" href="https://www.whatsapp.com/" rel="noreferrer" style="color: green">Whatsapp
+          <img style="width: 20px;" src="css/whatsapp.svg" alt="whatsapp" title="whatsapp"/></a>, 
+            o por 
+    <a target="_blank" href="https://www.skype.com/es/" rel="noreferrer" style="color: dodgerblue">
+            Skype  
+          <img style="width: 20px;" src="css/skype.svg" alt="skype" title="skype"/></a> 
+        </em>
+</p>
+
+<p class="w3-center w3-container " ><em>
+
   <br/>
-
-<p>  
-  <strong>
-       COMPLETAR con Info sobre las clases de guitarra
-  </strong> 
-
-  <br/> modalidad de las clases (ubicacion si es presencial)?
-  <br/> Clases por ZOOM en cuarentena?
-  <br/> pago mensual o por clase ​?
-    </em>
+  El objetivo es aprender a tocar <a href="https://es.wikipedia.org/wiki/Guitarra" rel="noopener" target="_blank" title="Guitarra">guitarra</a> y orientar a el/la alumno/a hacia el/los estilos de su preferencia. 
+  Enseño a tocar guitarra eléctrica, flamenca y acústica . Podrás componer tus propios temas. Tocar en la guitarra las canciones que te gustan. Tocar solo e improvisar con tu propio estilo.  
+ </em>
 </p>
 <p class="w3-center w3-hide-small w3-container " ><em>
 
-        
-<br/>         Querés aprender a tocar pero no te animas?
-<br/> Querés mejorar tu técnica?
-<br/> Clases de guitarra y ukelele en Talar 🎸🎶
-<br/> Producción musical para bandas.
-<br/>  
+  Te voy a enseñar acordes e inversiones en la guitarra, técnica de púa y dedos, improvisación, acompañamiento rítmico,  audioperceptiva (intervalos, escalas acordes), ritmos en diferentes estilos, armonía (formación de escalas y acordes), lectura, escritura, tablatura, teoría musical y muchos temas más. 
+</em></p>
+<p class="w3-center w3-container " >
+  Mis clases están diseñadas para todas las edades y <strong> vas a tocar desde la primer clase!</strong>
+  <br/><br/>
+<i class="material-icons">payment</i>  Medios de pago disponibles: Efectivo, transferencia o Mercado pago.
+  <br/>
 
-<i> Aprender a tocar <a href="https://es.wikipedia.org/wiki/Guitarra" rel="noopener" target="_blank" title="Guitarra">Guitarra</a> Flamenca - Guitarra Eléctrica - Guitarra Acústica - Ukelele </i>
-
-Clases de guitarra para principiantes, medios y avanzados. Podés aprender a tocar la guitarra más allá de la edad y el nivel. 
-
-Clases individuales y grupales de 1 hora semanal. El objetivo es aprender a tocar guitarra y orientar al alumno hacia el o los estilos de su preferencia. Enseño a tocar guitarra eléctrica, flamenca y acústica.
-
-Por medio de lecciones podrás tocar en la guitarra las canciones que te gustan. Componer tus propios temas. Tocar solo e improvisar con tu propio estilo.
-
-Acordes e inversiones en la guitarra, acompañamiento rítmico, tocar ritmos en diferentes estilos, técnica de púa y dedos, improvisación, audioperceptiva (intervalos, escalas acordes), lectura, escritura, tablatura, armonía (formación de escalas y acordes), teoría musical y muchos temas más. 
-
-Clases de guitarra para todas las edades.
+<strong>IMPORTANTE!</strong> Es indispensable que el alumno cuente con instrumento para practicar en su casa, para tomar la clase presencial se provee guitarra.
+  <br/><br/>
 
       </p>
  <br/>
@@ -297,28 +306,62 @@ Clases de guitarra para todas las edades.
         <div class="w3-quarter">
           <i class="material-icons w3-margin-bottom w3-jumbo w3-center">library_music</i>
           <p class="w3-large">Variedad de estilos</p>
-          <p>Estilos: Rock - Jazz - Blues - Folklóre - Flamenco - Metal - Latin - Funk y mas.</p>
+          <p>Estilos: Rock - Jazz - Blues - Folklore - Flamenco - Metal - Latin - Funk y mas.</p>
         </div>
         <div class="w3-quarter">
           <i class="fas fa-guitar w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Guitarra y ukulele</p>
-          <p>Clases de Guitarra eléctrica, criolla, flamenca y acústica.Clases de Ukulele.</p>
+          <p>Clases de Guitarra eléctrica, criolla, flamenca y acústica.Clases de Ukulele. Para tomar la clase presencial se provee guitarra.</p>
         </div>
         <div class="w3-quarter">
           <i class="fa fa-pencil-square-o w3-margin-bottom w3-jumbo"></i>
           <p class="w3-large">Teoría y practica</p>
-          <p>Lenguaje musical. Lectura de partitura. Arpegios, ligado mordente y mas.
+          <p>Lenguaje musical. Lectura de partitura. Arpegios, ligado mordente y mas. Producción musical para bandas.
           </p>
         </div>
         <div class="w3-quarter">
           <i class="material-icons w3-margin-bottom w3-jumbo w3-center">group</i>
           <p class="w3-large">Individuales y grupales</p>
-          <p>Clases Individuales y grupales. Presenciales o a distancia.</p>
+          <p>Clases individuales personalizadas según nivel y necesidades (1 hr semanal).
+            Clases grupales (1 hr y media semanal).
+          Clases de Ukelele, solo individual (1 hora).
+        </p>
         </div>
       </div>
   
+  <!-- Redes sociales -->
+  <p class="w3-center w3-med"> Seguime en mis redes sociales </p>
+  <div class="social-icons">
+
+    <a target="_blank" rel="noreferrer" title="Facebook NachoFlamenco" 
+            href="https://www.facebook.com/guitarraeneltalar/" >
+      <div class=" social-icon social-icon--facebook">
+      <i class="fab fa-facebook-square w3-hover-opacity "> </i>
+            <div class="tooltip "> Facebook</div>
+        </div> 
+      </a>
+
+      <a target="_blank" rel="noreferrer" title="instagram divbre NachoFlamenco" href="https://www.instagram.com/guitarra_en_talar/?hl=es-la"  >
+        <div class=" social-icon social-icon--instagram">
+          <i class="fab fa-instagram w3-hover-opacity "></i>         
+          <div class="tooltip w3-animate-zoom"> Instagram</div>
+        </div>   
+      </a>
+
+        <a target="_blank" rel="noreferrer" href="https://www.youtube.com/channel/UC14vb-V57tf-j_kZpGDIFvA" title="Youtube NachoFlamenco"  > 
+      <div class=" social-icon social-icon--youtube">
+          <i class="fab fa-youtube w3-hover-opacity  "></i> 
+          <div class="tooltip "> Youtube</div>
+          <div class=" icon__name"> Youtube</div>
+          </div> 
+          </a>
+  </div>
+  <br/><br/>
+
+
+
   <div id="videos" > 
-  <h3 class="w3-center" >Videos</h3>
+  <h3 class="w3-center" >Fotos y Videos</h3>
       <p class="w3-center">
         <em>
         Aquí están algunas fotos y videos de mis últimas muestras. Podés encontrar mas en mi canal de <a href="https://www.youtube.com/user/ZOYNACHO/videos" target="_blank" style="margin-bottom: 10px;">Youtube</a>
@@ -431,25 +474,22 @@ Clases de guitarra para todas las edades.
 
     <!-- Hide this text on small devices -->
       <div class="w3-col m8  w3-hide-small-no w3-padding-large">
-        <p> <strong> COMPLETAR con (texto sobre nacho) </strong>
-          experiencia: <br/>
-          bandas: <br/>
-          etc... <br/>
-
-          Profesor de Guitarra, 10 años de experiencia dando clases de guitarra en General Pacheco.
-
-<br/><br/><br/>
-Ejemplo:<br/>
-Estudios: Guitarra y armonía con Fabián Maraschi, Profesor Superior de Música egresado del Conservatorio "Manuel de Falla". Música popular en el ISPM (SADEM). Realizé mis estudios de guitarra clásica en el Conservatorio Superior de Música de la Ciudad de Bs As.
-
-Participe de grupos de rock, jazz, funk, blues y como solista de guitarra en diferentes estilos. En la actualidad me desempeño como profesor particular de guitarra dictando clases de guitarra eléctrica, clases de guitarra acústica, clases de guitarra criolla y cursos en mi estudio en Cuba 858 - El Talar.
+        <p> Ignacio Rocca nació el 1 de Agosto de 1983 en la provincia de Buenos Aires y desde su primera década de vida, la Guitarra ya se hacía presente. El toque flamenco siempre significó un misterio y una ambición que poco a poco fue develándose, sin embargo dedico sus primeros años de estudio en la guitarra al rock, de la mano de profesores como Martin Knie (Guitarra electrica “Kamikaze) y Leonardo Carrera (formación Berklee/ITMC). Años más tarde aboca su estudio a la guitarra flamenca, jazz y funk con profesores como Enrique de Córdoba (Los Tarantos) y Daniel Gomez.
         </p>
+        <p class="w3-hide-small">
+          Su trayectoria docente inicia en el 2002 en distintos institutos y centros culturales de zona norte. 
+          En la actualidad reside en El talar (Tigre) donde hace <strong>mas de 15 años</strong> dicta clases individuales en su domicilio y grupales (en la biblioteca del barrio) además de participar en produccion musical de ensambles y grupos musicales de la zona.
 
+        </p>
 
       </div>
 
     </div>
-
+    <div class="w3-row w3-padding-large">
+      Sus referentes en la guitarra flamenca: Sabicas, Manolo Sanlucar, Paco de Lucia, Tomatito, Gerardo Núñez, Vicente Amigo, Niño Miguel , Chicuelo entre algunos de ellos.
+        <br/>
+      Guitarra eléctrica: Jimi Hendrix, George Benson, Paul Gilbert, Steve Vai, Joe Satriani, Joe Pass, Eric Clapton, Luis Salinas, Scott Henderson, Frank Gambale, Walter Giardino, Tano Marciello, Yngwie Malmsteen, Kiko Loureiro, Al Di Meola, Greg Howe, Tommy Emmanuel.
+    </div>
     <!-- About Section -->
     <div class="w3-container" id="aboutInformation">
 
@@ -457,24 +497,6 @@ Participe de grupos de rock, jazz, funk, blues y como solista de guitarra en dif
         <iframe  class="w3-center" style="width:60%;height:345px" src="https://www.youtube.com/embed/eFTkzCQol0M">
         </iframe>
       </div>
-
-      <!-- Redes sociales -->
-      <div class="w3-padding-64 w3-section">
-        Seguime en mis redes sociales
-        <ul>
-          <li><a target="_blank" rel="noreferrer" title="Facebook NachoFlamenco"
-             href="https://www.facebook.com/guitarraeneltalar/"><i
-                  class="fab fa-facebook-square w3-hover-opacity  w3-xlarge"></i> Facebook</a>
-          </li>   
-        <li><a target="_blank" rel="noreferrer" title="instagram libre NachoFlamenco" href="https://www.instagram.com/guitarra_en_talar/?hl=es-la"><i class="fab fa-instagram w3-hover-opacity  w3-xlarge"></i> Instagram</a>
-        </li>
-
-          <li><a target="_blank" rel="noreferrer" href="https://www.youtube.com/channel/UC14vb-V57tf-j_kZpGDIFvA" title="Youtube NachoFlamenco"> <i class="fab fa-youtube w3-hover-opacity  w3-xlarge"></i> Youtube</a>
-          </li>
-
-          </ul>
-      </div>
-
 
     </div>
 </div>
@@ -491,8 +513,7 @@ Participe de grupos de rock, jazz, funk, blues y como solista de guitarra en dif
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">¿Alguna consulta?</h3>
-  <p class="w3-center">
-	  Solicita presupuesto <strong>sin cargo</strong> </p>
+  <p class="w3-center"><strong> Reservá tu horario </strong> </p>
 
   <div class="w3-row w3-padding-32 w3-section">
 
