--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h1{font-size:40px}h2{font-size:34px}h3{font-size:24px}h4{font-size:20px}h5{font-
 }
 	
 .no-webp .bgimg-1 {  background-image: url('fotos/fondo_principal.png');}
-.webp .bgimg-1 {   background-image: url('fotos/fondo_principal.png');}
+.webp .bgimg-1 {   background-image: url('fotos/fondo_principal.webp');}
 	
   /* Create a Parallax Effect */
   .bgimg-1, .bgimg-2, .bgimg-3 {
