compress and styles in skype class

--- a/index.html
+++ b/index.html
@@ -258,24 +258,26 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 
 
       <br/> 
-      <h2 class="w3-center ">¿Querés aprender a tocar pero no te animas?</h2>
-      <h2 class="w3-center ">¿Querés mejorar tu técnica?</h2>
+      <h2 class="w3-center ">¿Querés aprender a tocar pero no te animas? <br/> ¿Querés mejorar tu técnica?</h2>
 
   <h3 class="w3-center w3-med">
      Aprende a tocar la Guitarra <!--🎸🎶-->
   </h3>
     <br/>
    <p class="w3-center w3-container " ><em>
-  Clases presenciales, por 
-    <a target="_blank" href="https://zoom.us/" rel="noreferrer" >
-          <img style="width: 50px;" src="css/zoom.svg" alt="zoom" title="zoom"/></a>, 
+    Clases por 
+      <a target="_blank" href="https://zoom.us/" rel="noreferrer" >
+        <img style="width: 50px;" src="css/zoom.svg" alt="zoom" title="zoom"/></a>, 
           videollamada de 
-    <a target="_blank" href="https://www.whatsapp.com/" rel="noreferrer" style="color: green">Whatsapp
-          <img style="width: 20px;" src="css/whatsapp.svg" alt="whatsapp" title="whatsapp"/></a>, 
-            o por 
+        <a target="_blank" href="https://wa.me/5491151144197?text=Hola, me interesa saber sobre las clases de guitarra" rel="noreferrer" style="color: green">
+          Whatsapp
+      <i id="wpp-class" class="fab fa-whatsapp my-float" alt="whatsapp" title="whatsapp" style="font-size: 20px;" ></i></a>, 
+             por 
     <a target="_blank" href="https://www.skype.com/es/" rel="noreferrer" style="color: dodgerblue">
             Skype  
-          <img style="width: 20px;" src="css/skype.svg" alt="skype" title="skype"/></a> 
+          <i id="skype-class" class="fab fa-skype my-float" alt="skype" title="skype" style="font-size: 20px;" ></i>
+         </a> 
+          o presenciales
         </em>
 </p>
 
@@ -291,7 +293,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
   Te voy a enseñar acordes e inversiones en la guitarra, técnica de púa y dedos, improvisación, acompañamiento rítmico,  audioperceptiva (intervalos, escalas acordes), ritmos en diferentes estilos, armonía (formación de escalas y acordes), lectura, escritura, tablatura, teoría musical y muchos temas más. 
 </em></p>
 <p class="w3-center w3-container " >
-  Mis clases están diseñadas para todas las edades y <strong> vas a tocar desde la primer clase!</strong>
+  Mis clases están diseñadas para todas las edades y <strong> vas a tocar desde la primera clase!</strong>
   <br/><br/>
 <i class="material-icons">payment</i>  Medios de pago disponibles: Efectivo, transferencia o Mercado pago.
   <br/>
