deferred video load

--- a/index.html
+++ b/index.html
@@ -390,13 +390,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     </div>
   </div>
 
-  <div style=" display: flex; flex-wrap: wrap;" class="w3-row-padding w3-center">
-
-      <iframe style="height:360px" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/T0kaXFw_IL4"></iframe>
-      
-      <video style="height:360px;width: 200px" controls><source src="videos/muestra-quiero ser tu sombra.mp4" type="video/mp4" title="Quiero ser tu sombra">...</video>  
-
-      <iframe style="height:360px" allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/ibMSEH4L33Q"></iframe>      
+  <div style=" display: flex; flex-wrap: wrap;" class="w3-row-padding w3-center" id="video1-container">
 
     <!--  <video style="max-height:360px;max-width: 100%;" controls><source src="videos/Jose - All of me muestra 2019.mp4" type="video/mp4" title="All of me">...</video>
 
@@ -405,11 +399,9 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
   </div>
 
   <h3 class="w3-center">Resumen de la Muestra anual de 2019</h3>
-  <div style=" display: flex;">
-    <video class="w3-center" style="width: 100%"  controls>
-      <source src="videos/COMPILADO muestra 2019 .mp4" type="video/mp4" title="compilado muestra 2019">
-      ...
-    </video>
+  <div style=" display: flex;" id="video-muestra-container">
+
+
   </div>
 
      <!--boton VER MAS-->
