more deferred videos

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
         </div> 
       </a>
 
-      <a target="_blank" rel="noreferrer" title="instagram divbre NachoFlamenco" href="https://www.instagram.com/guitarra_en_talar/?hl=es-la"  >
+      <a target="_blank" rel="noreferrer" title="instagram NachoFlamenco" href="https://www.instagram.com/guitarra_en_talar/?hl=es-la"  >
         <div class=" social-icon social-icon--instagram">
           <i class="fab fa-instagram w3-hover-opacity "></i>         
           <div class="tooltip w3-animate-zoom"> Instagram</div>
@@ -391,18 +391,13 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
   </div>
 
   <div style=" display: flex; flex-wrap: wrap;" class="w3-row-padding w3-center" id="video1-container">
-
     <!--  <video style="max-height:360px;max-width: 100%;" controls><source src="videos/Jose - All of me muestra 2019.mp4" type="video/mp4" title="All of me">...</video>
-
-      <video style="max-height:360px;max-width: 100%;" controls><source src="videos/la alucinada.mp4" type="video/mp4" title="la alucinada">...</video>
--->
+      <video style="max-height:360px;max-width: 100%;" controls><source src="videos/la alucinada.mp4" type="video/mp4" title="la alucinada">...</video>-->
   </div>
 
   <h3 class="w3-center">Resumen de la Muestra anual de 2019</h3>
-  <div style=" display: flex;" id="video-muestra-container">
-
-
-  </div>
+  
+  <div style=" display: flex;" id="video-muestra-container"></div>
 
      <!--boton VER MAS-->
   <div class="w3-row">
@@ -478,7 +473,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
       </div>
 
     </div>
-    <div class="w3-row w3-padding-large">
+    <div class="w3-row w3-padding-large w3-hide-small">
       Sus referentes en la guitarra flamenca: Sabicas, Manolo Sanlucar, Paco de Lucia, Tomatito, Gerardo Núñez, Vicente Amigo, Niño Miguel , Chicuelo entre algunos de ellos.
         <br/>
       Guitarra eléctrica: Jimi Hendrix, George Benson, Paul Gilbert, Steve Vai, Joe Satriani, Joe Pass, Eric Clapton, Luis Salinas, Scott Henderson, Frank Gambale, Walter Giardino, Tano Marciello, Yngwie Malmsteen, Kiko Loureiro, Al Di Meola, Greg Howe, Tommy Emmanuel.
@@ -486,9 +481,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     <!-- About Section -->
     <div class="w3-container" id="aboutInformation">
 
-      <div style=" display: flex; justify-content: center;">
-        <iframe  class="w3-center" style="width:60%;height:345px" src="https://www.youtube.com/embed/eFTkzCQol0M">
-        </iframe>
+      <div style=" display: flex; justify-content: center;" id="video-of-me-container" >
       </div>
 
     </div>
