--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     <div hidden="true" id="templateContainer" class="w3-col m3">
     </div>
     <img hidden="true" id="template"  style="width:100%"
-         class="portfolio-img w3-hover-shadow"
+         class="portfolio-img w3-hover-shadow lazyload"
          title="Imagen de clases de guitarra Capital Federal CABA Lomas de Zamora Zona oeste"
          alt="Imagen de clases de guitarra Capital Federal" >
 
@@ -455,7 +455,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     <div class="w3-row">
       <a class="false-href w3-hide-small-no" href="#about">
         <div class="w3-col m4 w3-center w3-padding-large">
-          <img src="fotos/nacho.JPG" class="w3-round w3-image s w3-hover-opacity-off" alt="Nacho Rocca" width="300"
+          <img data-src="fotos/nacho.JPG" class="w3-round w3-image s w3-hover-opacity-off lazyload" alt="Nacho Rocca" width="300"
                height="400">
         </div>
       </a>
@@ -607,8 +607,9 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
    <!--Footer selection-->
    <!--///////////////////////////////////////////////////////-->
 
+    <script src="js/lazysizes.min.js" async></script>
 
- <script src="js/js-index-loader.js" async></script>
+    <script src="js/js-index-loader.js" async></script>
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
