avoid layout shift

--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     </div>
   </div>
 
-  <div style=" display: flex; flex-wrap: wrap;" class="w3-row-padding w3-center" id="video1-container">
+  <div style=" display: flex; flex-wrap: wrap;     min-height: 400px;" class="w3-row-padding w3-center" id="video1-container">
     <!--  <video style="max-height:360px;max-width: 100%;" controls><source src="videos/Jose - All of me muestra 2019.mp4" type="video/mp4" title="All of me">...</video>
       <video style="max-height:360px;max-width: 100%;" controls><source src="videos/la alucinada.mp4" type="video/mp4" title="la alucinada">...</video>-->
   </div>
 
   <h3 class="w3-center">Resumen de la Muestra anual de 2019</h3>
   
-  <div style=" display: flex;" id="video-muestra-container"></div>
+  <div style=" display: flex; min-height: 190px;" id="video-muestra-container"></div>
 
      <!--boton VER MAS-->
   <div class="w3-row">
@@ -481,7 +481,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     <!-- About Section -->
     <div class="w3-container" id="aboutInformation">
 
-      <div style=" display: flex; justify-content: center;" id="video-of-me-container" >
+      <div style=" display: flex; justify-content: center;  min-height: 345px;" id="video-of-me-container" >
       </div>
 
     </div>
